<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/ghore_thakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/nirapod_thakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="0.8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/emergency_treatment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/karjokrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1.8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/ghore_bose_sheba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginBottom="10dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/pete_abedon_korun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/abedon_korun"
            android:layout_marginBottom="10dp"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:background="@drawable/button_bg"
            android:text="@string/abedon_korun"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/porishonakn"
            android:layout_marginBottom="10dp"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:background="@drawable/button_bg_porishonkan"
            android:text="@string/porishonkan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/ayojone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/jela_proshahok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/sishu_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/openwebsite"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/fip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </LinearLayout>



</LinearLayout>