<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AbedonKorunFirst">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/tottho_din"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/name"
            android:textColor="@color/black"
            android:focusable="true"
            android:layout_marginBottom="13dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/name"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <EditText
            android:id="@+id/father"
            android:textColor="@color/black"
            android:focusable="true"
            android:layout_marginBottom="13dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/father_husband"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <EditText
            android:id="@+id/age"
            android:textColor="@color/black"
            android:focusable="true"
            android:layout_marginBottom="13dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/age"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <EditText
            android:id="@+id/weight"
            android:textColor="@color/black"
            android:focusable="true"
            android:layout_marginBottom="13dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/weight"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <EditText
            android:id="@+id/mobile"
            android:textColor="@color/black"
            android:focusable="true"
            android:layout_marginBottom="13dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/mobile"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <EditText
            android:id="@+id/address"
            android:textColor="@color/black"
            android:focusable="true"
            android:layout_marginBottom="13dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/address"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="120dp"/>
        <EditText
            android:id="@+id/roger_bornona"
            android:textColor="@color/black"
            android:focusable="true"
            android:layout_marginBottom="13dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/roger_bonona"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="120dp"/>

        <LinearLayout
            android:layout_marginBottom="13dp"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/doctor_designation"
                android:entries="@array/doctor_designation"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/gender"
            android:checkedButton="@id/male"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/male"
                android:buttonTint="@color/white"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/female"
                android:buttonTint="@color/white"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/other"
                android:buttonTint="@color/white"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>


        </LinearLayout>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/send_id"
            android:layout_marginBottom="20dp"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:background="@drawable/button_bg"
            android:text="@string/patan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>