<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AbedonKorunSecond">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginBottom="25dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/tottho_din"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:textColor="@color/black"
                android:focusable="true"
                android:layout_marginBottom="13dp"
                android:textStyle="bold"
                android:padding="10dp"
                android:hint="@string/address"
                android:background="@drawable/edittext_bg"
                android:layout_width="match_parent"
                android:layout_height="120dp"/>
            <EditText
                android:textColor="@color/black"
                android:focusable="true"
                android:layout_marginBottom="13dp"
                android:textStyle="bold"
                android:padding="10dp"
                android:hint="@string/roger_bonona"
                android:background="@drawable/edittext_bg"
                android:layout_width="match_parent"
                android:layout_height="120dp"/>

            <LinearLayout
                android:background="@drawable/edittext_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:entries="@array/doctor_designation"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

            </LinearLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/abedon_korun"
                android:layout_marginBottom="20dp"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:background="@drawable/button_bg"
                android:text="@string/patan"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>

</LinearLayout>