<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Porishonkan">

    <LinearLayout
        android:layout_margin="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/card_bg"
                    android:layout_marginBottom="28dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mot"
                        android:textColor="@color/porishonak"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abedonkari"
                        android:textColor="@color/porishonak"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_marginBottom="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/card_bg"
                android:layout_marginBottom="28dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chikticha_peyeche"
                        android:textColor="@color/porishonak"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prodan_kora_hoyeche"
                        android:textColor="@color/porishonak"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/success"
                        android:layout_marginBottom="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>


            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/card_bg"
                android:layout_marginBottom="28dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bishesoggo"
                        android:textColor="@color/porishonak"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chitchok"
                        android:textColor="@color/porishonak"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/doctor"
                        android:layout_marginBottom="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="320"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>